flux/apps/base/netbird-operator/manifest.readonly.yaml
# Generated with Renderer.sh at 2026-01-03T21:46:36+0100
# Chart version: 0.1.15
# Repo name: netbirdio
# Repo: https://netbirdio.github.io/kubernetes-operator
# Chart name: kubernetes-operator
---
# Source: kubernetes-operator/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netbird-operator-kubernetes-operator-metrics
  labels:
    helm.sh/chart: kubernetes-operator-0.1.15
    app.kubernetes.io/name: kubernetes-operator
    app.kubernetes.io/instance: netbird-operator
    app.kubernetes.io/version: "0.1.5"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: kubernetes-operator
    app.kubernetes.io/instance: netbird-operator
---
# Source: kubernetes-operator/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netbird-operator-kubernetes-operator-webhook-service
  labels:
    helm.sh/chart: kubernetes-operator-0.1.15
    app.kubernetes.io/name: kubernetes-operator
    app.kubernetes.io/instance: netbird-operator
    app.kubernetes.io/version: "0.1.5"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 9443
  selector:
    app.kubernetes.io/name: kubernetes-operator
    app.kubernetes.io/instance: netbird-operator
---
# Source: kubernetes-operator/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbird-operator-kubernetes-operator
  labels:
    app.kubernetes.io/component: operator
    helm.sh/chart: kubernetes-operator-0.1.15
    app.kubernetes.io/name: kubernetes-operator
    app.kubernetes.io/instance: netbird-operator
    app.kubernetes.io/version: "0.1.5"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kubernetes-operator
      app.kubernetes.io/instance: netbird-operator
  template:
    metadata:
      labels:
        app.kubernetes.io/component: operator
        helm.sh/chart: kubernetes-operator-0.1.15
        app.kubernetes.io/name: kubernetes-operator
        app.kubernetes.io/instance: netbird-operator
        app.kubernetes.io/version: "0.1.5"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: netbird-operator-kubernetes-operator
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: kubernetes-operator
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
          image: "docker.io/netbirdio/kubernetes-operator:0.1.5"
          imagePullPolicy: IfNotPresent
          command:
          - /manager
          args:
          - --metrics-bind-address=:8080
          - --leader-elect
          - --health-probe-bind-address=:8081
          - --webhook-cert-path=/tmp/k8s-webhook-server/serving-certs
          - --netbird-management-url=https://netbird.fingol.pro
          - --cluster-name=replacename
          - --cluster-dns=svc.cluster.local
          - --netbird-api-key=$(NB_API_KEY)
          - --allow-automatic-policy-creation
          ports:
            - name: webhook-server
              containerPort: 443
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 8081
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /readyz
              port: 8081
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            {}
          volumeMounts:
          - mountPath: /tmp/k8s-webhook-server/serving-certs
            name: webhook-certs
            readOnly: true
      volumes:
      - name: webhook-certs
        secret:
          defaultMode: 420
          secretName: netbird-operator-kubernetes-operator-tls
---
# Source: kubernetes-operator/templates/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: netbird-operator/netbird-operator-kubernetes-operator-serving-cert
  name: netbird-operator-kubernetes-operator-mpod-webhook
  labels:
    helm.sh/chart: kubernetes-operator-0.1.15
    app.kubernetes.io/name: kubernetes-operator
    app.kubernetes.io/instance: netbird-operator
    app.kubernetes.io/version: "0.1.5"
    app.kubernetes.io/managed-by: Helm
webhooks:
- clientConfig:
    service:
      name: netbird-operator-kubernetes-operator-webhook-service
      namespace: netbird-operator
      path: /mutate--v1-pod
  failurePolicy: Fail
  name: mpod-v1.netbird.io
  admissionReviewVersions:
  - v1
  objectSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: NotIn
      values:
      - kubernetes-operator
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
  sideEffects: None
---
# Source: kubernetes-operator/templates/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: netbird-operator/netbird-operator-kubernetes-operator-serving-cert
  name: netbird-operator-kubernetes-operator-vnbsetupkey-webhook
  labels:
    helm.sh/chart: kubernetes-operator-0.1.15
    app.kubernetes.io/name: kubernetes-operator
    app.kubernetes.io/instance: netbird-operator
    app.kubernetes.io/version: "0.1.5"
    app.kubernetes.io/managed-by: Helm
webhooks:
- clientConfig:
    service:
      name: netbird-operator-kubernetes-operator-webhook-service
      namespace: netbird-operator
      path: /validate-netbird-io-v1-nbsetupkey
  failurePolicy: Fail
  name: vnbsetupkey-v1.netbird.io
  admissionReviewVersions:
  - v1
  rules:
  - apiGroups:
    - netbird.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - "nbsetupkeys"
  sideEffects: None
---
# Source: kubernetes-operator/templates/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: netbird-operator/netbird-operator-kubernetes-operator-serving-cert
  name: netbird-operator-kubernetes-operator-vnbresource-webhook
  labels:
    helm.sh/chart: kubernetes-operator-0.1.15
    app.kubernetes.io/name: kubernetes-operator
    app.kubernetes.io/instance: netbird-operator
    app.kubernetes.io/version: "0.1.5"
    app.kubernetes.io/managed-by: Helm
webhooks:
- clientConfig:
    service:
      name: netbird-operator-kubernetes-operator-webhook-service
      namespace: netbird-operator
      path: /validate-netbird-io-v1-nbresource
  failurePolicy: Fail
  name: vnbresource-v1.netbird.io
  admissionReviewVersions:
  - v1
  rules:
  - apiGroups:
    - netbird.io
    apiVersions:
    - v1
    operations:
    - DELETE
    resources:
    - "nbresources"
  sideEffects: None
---
# Source: kubernetes-operator/templates/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: netbird-operator/netbird-operator-kubernetes-operator-serving-cert
  name: netbird-operator-kubernetes-operator-vnbroutingpeer-webhook
  labels:
    helm.sh/chart: kubernetes-operator-0.1.15
    app.kubernetes.io/name: kubernetes-operator
    app.kubernetes.io/instance: netbird-operator
    app.kubernetes.io/version: "0.1.5"
    app.kubernetes.io/managed-by: Helm
webhooks:
- clientConfig:
    service:
      name: netbird-operator-kubernetes-operator-webhook-service
      namespace: netbird-operator
      path: /validate-netbird-io-v1-nbroutingpeer
  failurePolicy: Fail
  name: vnbroutingpeer-v1.netbird.io
  admissionReviewVersions:
  - v1
  rules:
  - apiGroups:
    - netbird.io
    apiVersions:
    - v1
    operations:
    - DELETE
    resources:
    - "nbroutingpeers"
  sideEffects: None
---
# Source: kubernetes-operator/templates/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: netbird-operator/netbird-operator-kubernetes-operator-serving-cert
  name: netbird-operator-kubernetes-operator-vnbgroup-webhook
  labels:
    helm.sh/chart: kubernetes-operator-0.1.15
    app.kubernetes.io/name: kubernetes-operator
    app.kubernetes.io/instance: netbird-operator
    app.kubernetes.io/version: "0.1.5"
    app.kubernetes.io/managed-by: Helm
webhooks:
- clientConfig:
    service:
      name: netbird-operator-kubernetes-operator-webhook-service
      namespace: netbird-operator
      path: /validate-netbird-io-v1-nbgroup
  failurePolicy: Fail
  name: vnbgroup-v1.netbird.io
  admissionReviewVersions:
  - v1
  rules:
  - apiGroups:
    - netbird.io
    apiVersions:
    - v1
    operations:
    - DELETE
    resources:
    - "nbgroups"
  sideEffects: None
